--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,10 +2,10 @@ use_frameworks!
 
 platform :ios, '11.0'
 
-target 'trackier-ios-sdk_Example' do
+target 'apptrove-ios-sdk_Example' do
   pod 'apptrove-ios-sdk', :path => '../'
 
-  target 'trackier-ios-sdk_Tests' do
+  target 'apptrove-ios-sdk_Tests' do
     inherit! :search_paths
   end
 end
