--- a/Example/apptrove-ios-sdk/Info.plist
+++ b/Example/apptrove-ios-sdk/Info.plist
@@ -35,5 +35,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>This app uses tracking to provide personalized ads and improve your experience.</string>
 </dict>
 </plist>
